prevent horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,8 @@
   }
   html,
   body {
+    max-width: 100%;
+    overflow-x: hidden;
     transition:
       background-color 0.3s,
       color 0.3s,
